--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+BareNecessities==0.2.8
 blinker==1.4
-click==6.7
-Flask==0.12.2
+Click==7.0
+Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-Mail==0.9.1
 Flask-Script==2.0.6
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-Werkzeug==0.14.1
-gunicorn==19.7.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+Mail==2.1.0
+MarkupSafe==1.1.1
+six==1.12.0
+Werkzeug==0.15.2
