--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.6.0
 BareNecessities==0.2.8
 blinker==1.4
 Click==7.0
@@ -5,10 +6,14 @@ Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-Mail==0.9.1
 Flask-Script==2.0.6
+funcsigs==1.0.2
+futures==3.2.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mail==2.1.0
 MarkupSafe==1.1.1
+pytz==2019.1
 six==1.12.0
+tzlocal==1.5.1
 Werkzeug==0.15.2
